added gateway-service with zuul

--- a/auth-service/src/main/resources/boostrap.properties
+++ b/auth-service/src/main/resources/boostrap.properties
@@ -1,3 +1,4 @@
 spring.application.name=auth-service
 spring.cloud.config.enabled=true
-spring.cloud.config.uri=http://config-server:9296
+spring.cloud.config.uri=http://localhost:9296
+server.port=0
