--- a/config-server/src/main/resources/application.properties
+++ b/config-server/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=config-server
 server.port=9296
 
-#eureka.client.register-with-eureka=true
-#eureka.client.fetch-registry=true
-#eureka.client.serviceUrl.defaultZone=http://discovery-service:8761/eureka/
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
+eureka.client.serviceUrl.defaultZone=http://discovery-service:8761/eureka/
 #eureka.instance.instance-id=${spring.application.name}:${random.uuid}
 
 spring.profiles.active=native
