--- a/product-service/src/main/resources/application.properties
+++ b/product-service/src/main/resources/application.properties
@@ -1,8 +1,8 @@
-spring.application.name=user-service
 spring.datasource.url=jdbc:mariadb://localhost:3306/carrot_product?useUnicode=true&zeroDateTimeBehavior=convertToNull
-spring.datasource.username=
-spring.datasource.password=
+spring.datasource.username=root
+spring.datasource.password=toor123
 spring.datasource.driverClassName=org.mariadb.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
-spring.profiles.active=swagger
 server.port=0
+spring.application.name=product-service
+spring.profiles.active=swagger
