--- a/gateway-service/src/main/resources/application.properties
+++ b/gateway-service/src/main/resources/application.properties
@@ -1,1 +1,35 @@
+#spring:
+#    application:
+#        name: GATEWAY-SERVICE
+#    cloud:
+#        gateway:
+#            routes:
+#              - id: PRODUCT-SERVICE
+#                uri: lb://PRODUCT-SERVICE
+#                predicates:
+#                  - Path=/products/**
+#              - id: USER-SERVICE
+#                uri: lb://USER-SERVICE
+#                predicates:
+#                  - Path=/users/**
+#              - id: AUTH-SERVICE
+#                uri: lb://AUTH-SERVICE
+#                predicates:
+#                  - Path=/auth/**
+#server:
+#  port: 8080
 server.port=8080
+spring.application.name=gateway-service
+spring.cloud.gateway.discovery.locator.enabled=true
+spring.cloud.gateway.routes[0].id=users
+spring.cloud.gateway.routes[0].uri=lb://USER-SERVICE/
+spring.cloud.gateway.routes[0].predicates[0]=Path=/users/**
+
+spring.cloud.gateway.routes[1].id=products
+spring.cloud.gateway.routes[1].uri=lb://PRODUCT-SERVICE
+spring.cloud.gateway.routes[1].predicates[0]=Path=/products/**
+
+spring.cloud.gateway.routes[2].id=auth
+spring.cloud.gateway.routes[2].uri=lb://AUTH-SERVICE
+spring.cloud.gateway.routes[2].predicates[0]=Path=/auth/**
+
