fixed problem with auth-service; fixed application.properties for gateway-service and auth-service; added endpoint loadByUsername;

--- a/auth-service/src/main/resources/application.properties
+++ b/auth-service/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 spring.application.name=auth-service
 server.port=0
-spring.profiles.active=swagger
+spring.profiles.include=swagger
+eureka.client.eureka-service-url-poll-interval-seconds=10
