--- a/gateway-service/src/main/resources/application.properties
+++ b/gateway-service/src/main/resources/application.properties
@@ -21,15 +21,19 @@
 server.port=8080
 spring.application.name=gateway-service
 spring.cloud.gateway.discovery.locator.enabled=true
+spring.cloud.gateway.discovery.locator.lower-case-service-id=true
+eureka.client.eureka-service-url-poll-interval-seconds=10
+
+spring.cloud.gateway.default-filters[0]=StripPrefix=1
 spring.cloud.gateway.routes[0].id=users
-spring.cloud.gateway.routes[0].uri=lb://USER-SERVICE/
+spring.cloud.gateway.routes[0].uri=lb://user-service
 spring.cloud.gateway.routes[0].predicates[0]=Path=/users/**
 
 spring.cloud.gateway.routes[1].id=products
-spring.cloud.gateway.routes[1].uri=lb://PRODUCT-SERVICE
+spring.cloud.gateway.routes[1].uri=lb://product-service
 spring.cloud.gateway.routes[1].predicates[0]=Path=/products/**
 
 spring.cloud.gateway.routes[2].id=auth
-spring.cloud.gateway.routes[2].uri=lb://AUTH-SERVICE
+spring.cloud.gateway.routes[2].uri=lb://auth-service
 spring.cloud.gateway.routes[2].predicates[0]=Path=/auth/**
 
